--- a/pacman.html
+++ b/pacman.html
@@ -8,8 +8,20 @@
     <title>Pac-man</title>
 </head>
 <body>
+    <div id='container'>
 
-    <div id='world'></div>
+        <div id='world'></div>
+        <div id='pacman' class='ghost'></div>
+        <div id='score'>0</div>
+        <div id='life'></div>
+    
+    </div>
+
+    <script type ="text/javascript">
+        displayWorld();
+        displayPacman();
+        displayLife();
+    </script>
 
 </body>
 </html>
